--- a/ATS Website/candidate.html
+++ b/ATS Website/candidate.html
@@ -518,7 +518,7 @@
                               </div>
                               <div class="card-block">
                                 <div id="view-info" class="row info-show">
-                                  <div class="col-lg-6 col-md-12">
+                                  <div class="col-md-12">
                                     <form>
                                       <table class="table table-responsive m-b-0">
                                         <tr>
@@ -547,7 +547,7 @@
                                   </div>
                                 </div>
                                 <div id="edit-info" class="row edit-form">
-                                  <div class="col-lg-12 col-md-12">
+                                  <div class="col-md-12">
                                     <form>
                                       <div class="input-group">
                                         <input type="text" class="form-control" placeholder="Full Name">
@@ -604,7 +604,7 @@
                               </div>
                               <div class="card-block">
                                 <div id="contact-info" class="row info-show">
-                                  <div class="col-lg-6 col-md-12">
+                                  <div class="col-md-12">
                                     <table class="table table-responsive m-b-0">
                                       <tr>
                                         <th class="social-label b-none p-t-0">Mobile Number</th>
@@ -626,7 +626,7 @@
                                   </div>
                                 </div>
                                 <div id="edit-contact-info" class="row edit-form">
-                                  <div class="col-lg-12 col-md-12">
+                                  <div class="col-md-12">
                                     <form>
                                       <div class="input-group">
                                         <input type="text" class="form-control" placeholder="Mobile number">
@@ -660,7 +660,7 @@
                               </div>
                               <div class="card-block">
                                 <div id="work-info" class="row info-show">
-                                  <div class="col-lg-6 col-md-12">
+                                  <div class="col-md-12">
                                     <table class="table table-responsive m-b-0">
                                       <tr>
                                         <th class="social-label b-none p-t-0">Occupation &nbsp; &nbsp; &nbsp;
@@ -679,7 +679,7 @@
                                   </div>
                                 </div>
                                 <div id="edit-contact-work" class="row edit-form">
-                                  <div class="col-lg-12 col-md-12">
+                                  <div class="col-md-12">
                                     <form>
                                       <div class="input-group">
                                         <select id="occupation" class="form-control">
@@ -715,30 +715,28 @@
                         </div>
                       </div>
                       <div role="tabpanel" class="tab-pane fade" id="skills">
-<div class="row">
-  <div class="col-md-6">
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25</div>
-    </div>
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50</div>
-    </div>
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75</div>
-    </div>
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">90</div>
-    </div>
-  </div>
-</div>
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25</div>
+                            </div>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50</div>
+                            </div>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75</div>
+                            </div>
+                            <div class="progress">
+                              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">90</div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                       <div role="tabpanel" class="tab-pane fade" id="cv">
                         <div class="row">
                         </div>
                       </div>
-
                     </div>
-
                   </div>
                 </div>
               </div>
@@ -791,34 +789,34 @@
     <div class="container">
       <div class="row text-center text-xs-center text-sm-left text-md-left">
         <div class="col-xs-6 col-sm-4 col-md-3">
-          <h5>About Us</h5>
+          <h5>CrossTab</h5>
           <ul class="list-unstyled quick-links">
             <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Vision</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>About PureBricks</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Why use PureBricks?</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>How Purebricks Works</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>About Us</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Why use Talent Cache?</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>News & Awards</a></li>
             <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Terms</a></li>
             <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Privacy Policy</a></li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-3">
-          <h5>Our Services</h5>
+          <h5>Our Products</h5>
           <ul class="list-unstyled quick-links">
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Advertise a room</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Place a room wanted ad</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Lend a property</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Purchase a property</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Application Tracking System</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Career Website</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>On Boarding</a></li>
+<!--             <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Purchase a property</a></li>
             <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Student Accomodation</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Find a roommate</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Find a roommate</a></li> -->
           </ul>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-3">
-          <h5>Find your Home</h5>
+          <h5>Find your Job</h5>
           <ul class="list-unstyled quick-links">
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>England</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Scotland</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Wales</a></li>
-            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Northern Ireland</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>India</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Europe</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>America</a></li>
+            <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Australia</a></li>
           </ul>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-3">
@@ -855,7 +853,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
           <p></p>
-          <p class="h6">&copy PureBricks<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank"></a>All right reserved.</p>
+          <p class="h6">&copy Talent Cache<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank"></a>All right reserved.</p>
         </div>
       </div>  
     </div>
