--- a/ATS Website/index.html
+++ b/ATS Website/index.html
@@ -82,7 +82,7 @@
                   <div class="col-md-12">
                     For fast registration
                     <div class="social-buttons">
-                      <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i>   Register using Facebook</a>
+                      <a href="#" class="btn btn-fb"><i class="fa fa-linkedin"></i>   Register using LinkedIn</a>
                     </div>
                                    <hr><div class="text-center">or</div><hr>Register with your email
                      <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
@@ -121,76 +121,168 @@
           </ul>
         </div>
         <div class="btn-group">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-            Login <span class="caret"></span>
-          </button>
-          <ul id="login-dp" class="dropdown-menu dropdown-menu-right" role="menu">
-            <li>
-               <div class="row">
-                  <div class="col-md-12">
-                    Login via
-                    <div class="social-buttons">
-                      <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i>   Facebook</a>
-                      <!-- <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a> -->
-                    </div>
-                    <hr><div class="text-center">or</div><hr> 
-                     <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-                        <div class="form-group">
-                           <label class="sr-only" for="exampleInputEmail2">Email Address</label>
-                           <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
-                        </div>
-                        <div class="form-group">
-                           <label class="sr-only" for="exampleInputPassword2">Password</label>
-                           <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
-                                                 <div class="help-block text-right"><a href="">Forget the password ?</a></div>
-                        </div>
-                        <div class="form-group">
-                           <button type="submit" class="btn btn-primary btn-block">Sign In</button>
-                        </div>
-                        <div class="checkbox">
-                           <label>
-                           <input type="checkbox"> keep me logged-in
-                           </label>
-                        </div>
-                     </form>
-                  </div>
-                  <div class="bottom text-center">
-                    New here ? <a href="#"><b>Join Us</b></a>
-                  </div>
-               </div>
-            </li>
-          </ul>
+          <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">
+            Login</button>
         </div>
-<!--         <div class="btn-group">
-          <button type="button" class="btn btn-mine dropdown-toggle" data-toggle="dropdown">
-            <img src="./img/uk.png" style="width: 20px;"> UK <span class="caret"></span>
-          </button>
-          <ul id="login-dp" class="dropdown-menu dropdown-menu-right" role="menu">
-            <li>
-               <div class="row">
-                  <div class="col-md-12">
-                    In which country are you looking?
-                     <form class="form" role="form" method="post" action="#" accept-charset="UTF-8" id="login-nav">
-                        <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                          <label class="form-check-label" for="inlineRadio1">UK</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                          <label class="form-check-label" for="inlineRadio2">USA</label>
-                        </div>
-                        <div class="form-group">
-                           <button type="submit" class="btn btn-primary btn-block">Save</button>
-                        </div>
-                     </form>
-                  </div>
-               </div>
-            </li>
-          </ul>
-        </div> -->
       </div>
     </div>
   </section>
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Login</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-md-8" style="border-right: 1px dotted #C2C2C2;padding-right: 30px;">
+              <!-- Nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#Candidate" data-toggle="tab">Candidate Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#Company" data-toggle="tab">Company Login</a>
+                </li>
+              </ul>
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <div class="tab-pane active" id="Candidate">
+                  <form role="form" class="form-horizontal">
+                    <div class="form-group">
+                      <label for="email" class="col-sm-2 control-label">
+                      Email</label>
+                      <div class="col-sm-10">
+                        <input type="email" class="form-control" id="email1" placeholder="Enter Your Email" />
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputPassword1" class="col-sm-2 control-label">
+                      Password</label>
+                      <div class="col-sm-10">
+                        <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Enter Your Password" />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-2">
+                      </div>
+                      <div class="col-sm-10">
+                        <button type="submit" class="btn btn-primary btn-sm">
+                        Submit</button>
+                        <a href="javascript:;">Forgot your password?</a>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="tab-pane" id="Company">
+
+
+          <div class="row">
+            <div class="col-md-12" style="padding-right: 30px;">
+              <!-- Nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#Recruiter" data-toggle="tab" style="font-size: smaller;">Recruiter Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#Admin" data-toggle="tab" style="font-size: smaller;">Admin Login</a>
+                </li>
+              </ul>
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <div class="tab-pane active" id="Recruiter">
+                  <form role="form" class="form-horizontal">
+                    <div class="form-group">
+                      <label for="email" class="col-sm-2 control-label">
+                      Email</label>
+                      <div class="col-sm-10">
+                        <input type="email" class="form-control" id="email1" placeholder="Enter Your Email" />
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputPassword1" class="col-sm-2 control-label">
+                      Password</label>
+                      <div class="col-sm-10">
+                        <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Enter Your Password" />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-2">
+                      </div>
+                      <div class="col-sm-10">
+                        <button type="submit" class="btn btn-primary btn-sm">
+                        Submit</button>
+                        <a href="javascript:;">Forgot your password?</a>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="tab-pane" id="Admin">
+                  <form role="form" class="form-horizontal">
+                    <div class="form-group">
+                      <label for="email" class="col-sm-2 control-label">
+                      Email</label>
+                      <div class="col-sm-10">
+                        <input type="email" class="form-control" id="email1" placeholder="Enter Your Email" />
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputPassword1" class="col-sm-2 control-label">
+                      Password</label>
+                      <div class="col-sm-10">
+                        <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Enter Your Password" />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-2">
+                      </div>
+                      <div class="col-sm-10">
+                        <button type="submit" class="btn btn-primary btn-sm">
+                        Submit</button>
+                        <a href="javascript:;">Forgot your password?</a>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+                </div>
+              </div>
+              <div id="OR" class="hidden-xs">
+              OR</div>
+            </div>
+            <div class="col-md-4">
+              <div class="row text-center sign-with">
+                <div class="col-md-12">
+                  <h5>
+                  Sign in with</h5>
+                </div>
+                <div class="col-md-12">
+                  <div class="btn-group btn-group-justified">
+                    <a href="#" class="btn btn-linkedin">LinkedIn</a>
+                    <a href="#" class="btn btn-google">Google</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-sm btn-danger" data-dismiss="modal">Close</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
   <!--==========================
     Header
@@ -312,10 +404,10 @@
                 <div class="tab1">
                   <h4 class="">Talent Cache AMS is a Leading Best-of-Breed Recruiting Software</h4>
                   <div class="row">
-                    <div class="col-md-3 language">
-                      <img src="./img/ipad1.png" class="img-fluid">
+                    <div class="col-md-6">
+                      <img src="./img/task.gif" class="img-fluid">
                     </div>
-                    <div class="col-md-9 small-description">
+                    <div class="col-md-6 small-description">
                       <p class="">Our comprehensive recruiting platform accelerates recruiting with an easy-to-use AMS, social recruiting capabilities, mobile-optimized branded career sites, a recruiting branding solution, on-demand video screening, advanced analytics, onboarding, and seamless integration with other HR systems.</p>
                     </div>
                   </div>                
