candidate page update

--- a/ATS Website/index.html
+++ b/ATS Website/index.html
@@ -481,7 +481,7 @@
           </div>
 
           <div class="col-lg-6 about-img">
-            <img src="img/mockup.png" alt="">
+            <img src="img/mockup-video.gif" alt="">
           </div>
 
         </div>
