--- a/ATS Website/index3.html
+++ b/ATS Website/index3.html
@@ -370,7 +370,7 @@
           </div>
 
           <div class="col-lg-6 about-img">
-            <img src="img/photoshop.gif" alt="">
+            <img src="img/mockup.png" alt="">
           </div>
 
         </div>
