--- a/ATS Website/candidate.html
+++ b/ATS Website/candidate.html
@@ -557,7 +557,7 @@
                               <div class="card-header card-edit">
                                 <h5 class="card-header-text">Education</h5>
                                 <button id="edit-education" type="button" class="btn btn-primary waves-effect waves-light f-right btn-edit">
-                                  <i class="fa fa-edit"></i>
+                                  <i class="fa fa-plus"></i>
                                 </button>
                               </div>
                               <div class="card-block">
@@ -745,7 +745,7 @@
                               <div class="card-header card-edit">
                                 <h5 class="card-header-text">Experience</h5>
                                 <button id="edit-experience" type="button" class="btn btn-primary waves-effect waves-light f-right btn-edit">
-                                  <i class="fa fa-edit"></i>
+                                  <i class="fa fa-plus"></i>
                                 </button>
                               </div>
                               <div class="card-block">
@@ -846,7 +846,7 @@
                               <div class="card-header card-edit">
                                 <h5 class="card-header-text">Projects</h5>
                                 <button id="btn-projects" type="button" class="btn btn-primary waves-effect waves-light f-right btn-edit">
-                                  <i class="fa fa-edit"></i>
+                                  <i class="fa fa-plus"></i>
                                 </button>
                               </div>
                               <div class="card-block">
@@ -948,7 +948,7 @@
                               <div class="card-header card-edit">
                                 <h5 class="card-header-text">Certification</h5>
                                 <button id="btn-certificate" type="button" class="btn btn-primary waves-effect waves-light f-right btn-edit">
-                                  <i class="fa fa-edit"></i>
+                                  <i class="fa fa-plus"></i>
                                 </button>
                               </div>
                               <div class="card-block">
