--- a/ATS Website/candidate.html
+++ b/ATS Website/candidate.html
@@ -238,11 +238,16 @@
                                                       <button class="btn btn-primary btn-icon"><img src="./img/hcl.jpeg" class="card-img"></button>
                                                       <h5>HCL Technologies</h5>
                                                       <p>Web Developer</p>
-                                                      <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                                        <button type="button" class="btn btn-secondary">Apply</button>
-                                                        <button type="button" class="btn btn-secondary">Not Interested</button>
+                                                      <div class="btn-group" role="group">
+                                                        <button id="btnGroupDrop1" type="button" class="btn btn-action dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                          Action
+                                                        </button>
+                                                        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                                          <a class="dropdown-item" href="#">Apply</a>
+                                                          <a class="dropdown-item" href="#">Not Interested</a>
+                                                          <a class="dropdown-item" href="#">Draft</a>
+                                                        </div>
                                                       </div>
-                                                      <button type="button" class="btn btn-sm btn-secondary">Draft</button>
                                                     </div>
                                                   </div>
                                                 </div>
@@ -259,11 +264,16 @@
                                                       <button class="btn btn-success btn-icon"><img src="./img/accenture.png" class="card-img"></button>
                                                       <h5>Accenture</h5>
                                                       <p>Web Designer</p>
-                                                      <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                                        <button type="button" class="btn btn-secondary">Apply</button>
-                                                        <button type="button" class="btn btn-secondary">Not Interested</button>
+                                                      <div class="btn-group" role="group">
+                                                        <button id="btnGroupDrop1" type="button" class="btn btn-action dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                          Action
+                                                        </button>
+                                                        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                                          <a class="dropdown-item" href="#">Apply</a>
+                                                          <a class="dropdown-item" href="#">Not Interested</a>
+                                                          <a class="dropdown-item" href="#">Draft</a>
+                                                        </div>
                                                       </div>
-                                                      <button type="button" class="btn btn-sm btn-secondary">Draft</button>
                                                     </div>
                                                   </div>
                                                 </div>
@@ -280,11 +290,16 @@
                                                       <button class="btn btn-warning btn-icon"><img src="./img/tcs.jpg" class="card-img"></button>
                                                       <h5>TCS</h5>
                                                       <p>Front End Developer</p>
-                                                      <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                                        <button type="button" class="btn btn-secondary">Apply</button>
-                                                        <button type="button" class="btn btn-secondary">Not Interested</button>
+                                                      <div class="btn-group" role="group">
+                                                        <button id="btnGroupDrop1" type="button" class="btn btn-action dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                          Action
+                                                        </button>
+                                                        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                                          <a class="dropdown-item" href="#">Apply</a>
+                                                          <a class="dropdown-item" href="#">Not Interested</a>
+                                                          <a class="dropdown-item" href="#">Draft</a>
+                                                        </div>
                                                       </div>
-                                                      <button type="button" class="btn btn-sm btn-secondary">Draft</button>
                                                     </div>
                                                   </div>
                                                 </div>
@@ -318,10 +333,10 @@
                                                         <h5>Infosys</h5>
                                                         <p>Front End Developer</p>
                                                         <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                                        <button type="button" class="btn btn-secondary">Status</button>
-                                                        Waiting
-                                                      </div>
-                                                      <button type="button" class="btn btn-sm btn-secondary">Contact HR</button>
+                                                          <button type="button" class="btn btn-secondary">Status</button>
+                                                        <span>Waiting</span>
+                                                        </div>
+                                                        <button type="button" class="btn btn-sm btn-hr">Contact HR</button>
                                                       </div>
                                                     </div>
                                                   </div>
@@ -339,10 +354,10 @@
                                                         <h5>Wipro</h5>
                                                         <p>Front End Developer</p>
                                                         <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                                        <button type="button" class="btn btn-secondary">Status</button>
-                                                        Waiting
-                                                      </div>
-                                                      <button type="button" class="btn btn-sm btn-secondary">Contact HR</button>
+                                                          <button type="button" class="btn btn-secondary">Status</button>
+                                                        <span>Waiting</span>
+                                                        </div>
+                                                        <button type="button" class="btn btn-sm btn-hr">Contact HR</button>
                                                       </div>
                                                     </div>
                                                   </div>
@@ -360,10 +375,10 @@
                                                         <h5>IBM</h5>
                                                         <p>Front End Developer</p>
                                                         <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                                                        <button type="button" class="btn btn-secondary">Status</button>
-                                                        Waiting
-                                                      </div>
-                                                      <button type="button" class="btn btn-sm btn-secondary">Contact HR</button>
+                                                          <button type="button" class="btn btn-secondary">Status</button>
+                                                        <span>Waiting</span>
+                                                        </div>
+                                                        <button type="button" class="btn btn-sm btn-hr">Contact HR</button>
                                                       </div>
                                                     </div>
                                                   </div>
@@ -397,7 +412,7 @@
                                                         <button class="btn btn-warning btn-icon"><img src="./img/honeywell.jpg" class="card-img"></button>
                                                         <h5>Honeywell</h5>
                                                         <p>Front End Developer</p>
-                                                      <button type="button" class="btn btn-sm btn-secondary">Apply</button>
+                                                      <button type="button" class="btn btn-sm">Apply</button>
                                                       </div>
                                                     </div>
                                                   </div>
@@ -414,7 +429,7 @@
                                                         <button class="btn btn-danger btn-icon"><img src="./img/dell.jpg" class="card-img"></button>
                                                         <h5>Dell</h5>
                                                         <p>Front End Developer</p>
-                                                      <button type="button" class="btn btn-sm btn-secondary">Apply</button>
+                                                      <button type="button" class="btn btn-sm">Apply</button>
                                                       </div>
                                                     </div>
                                                   </div>
