--- a/ATS Website/index4.html
+++ b/ATS Website/index4.html
@@ -446,7 +446,7 @@
                   <h4 class="">Talent Cache AMS Makes Hiring Easy and Cost Effective</h4>
                   <div class="row">
                     <div class="col-md-8">
-                      <img src="./img/task2.gif" class="img-fluid">
+                      <img src="./img/task.gif" class="img-fluid">
                     </div>
                     <div class="col-md-4 small-description">
                       <p class="">Talent Cache AMS—our innovative Applicant Mapping System—goes way beyond your garden-variety ATS. Leveraging many years of development expertise and feedback from thousands of customers, our product is expertly built to make your job easier, your recruiting more efficient, and your strategies more cost-effective.</p>
@@ -481,7 +481,7 @@
           </div>
 
           <div class="col-lg-6 about-img">
-            <img src="img/mockup-video.gif" alt="">
+            <img src="img/popup.gif" alt="">
           </div>
 
         </div>
@@ -593,7 +593,31 @@
       </div>
       </div>
     </section>
-    <!-- #clients -->
+    <!-- #features -->
+
+    <!--==========================
+      Application Section
+    ============================-->
+    <section id="application" class="wow fadeInLeft">
+      <div class="container">
+        <div class="section-header text-center">
+          <h2>Our Product</h2>
+          <p>Download our app for quick access</p>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="preview1">
+              <img class="previewimg1" src="./img/page.jpg"/>
+            </div>
+          </div>
+          <div class="col-md-6 col-12">
+            <div class="preview">
+              <div class="previewimg"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- #app -->
 
     <!--==========================
       Clients Section
@@ -619,266 +643,6 @@
       </div>
     </section>
     <!-- #clients -->
-
-    <!--==========================
-      Our Portfolio Section
-    ============================-->
-<!--     <section id="portfolio" class="wow fadeInUp">
-      <div class="container">
-        <div class="section-header text-center" id="whole-uk">
-          <h2>Purchase Property</h2>
-          <p>Check the properties in the following countries. Make your life luxurious.</p>
-        </div>
-      </div>
-
-      <div class="container-fluid">
-        <div class="row no-gutters">
-
-          <div class="col-6 col-sm-6 col-md-3" id="set">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="#" class="portfolio-popup">
-                <img src="img/portfolio/1.png" alt="" class="rounded mx-auto d-block">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info"><h2 class="wow fadeInUp">England</h2></div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-6 col-sm-6 col-md-3" id="set">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="#" class="portfolio-popup">
-                <img src="img/portfolio/2.png" alt="" class="rounded mx-auto d-block">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info"><h2 class="wow fadeInUp">Scotland</h2></div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-6 col-sm-6 col-md-3" id="set">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="#" class="portfolio-popup">
-                <img src="img/portfolio/3.png" alt="" class="rounded mx-auto d-block">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info"><h2 class="wow fadeInUp">Wales</h2></div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-6 col-sm-6 col-md-3" id="set">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="#" class="portfolio-popup">
-                <img src="img/portfolio/4.png" alt="" class="rounded mx-auto d-block">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info"><h2 class="wow fadeInUp">Northern Ireland</h2></div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section> --><!-- #portfolio -->
-
-    <!--==========================
-      Listing Section
-    ============================-->
-<!--     <section id="listing" class="wow fadeInRight">
-
-
-    <div class="container-fluid">
-        <div class="section-header text-center">
-          <h2>Favourites</h2>
-          <p>Check out famous place</p>
-        </div>
-        <div class="container container-pad" id="property-listings">
-            
-            <div class="row">
-                <div class="col-sm-6"> 
-
-
-                    <div class="brdr bgc-fff pad-10 box-shad btm-mrg-20 property-listing">
-                        <div class="media">
-                            <a class="pull-left" href="#" target="_parent">
-                            <img alt="image" class="img-fluid" src="http://images.prd.mris.com/image/V2/1/Yu59d899Ocpyr_RnF0-8qNJX1oYibjwp9TiLy-bZvU9vRJ2iC1zSQgFwW-fTCs6tVkKrj99s7FFm5Ygwl88xIA.jpg"></a>
-
-                            <div class="clearfix visible-sm"></div>
-
-                            <div class="media-body fnt-smaller">
-                                <a href="#" target="_parent"></a>
-
-                                <h4 class="media-heading">
-                                  <a href="#" target="_parent">$1,975,000 <small class="pull-right">609 W Gravers Ln</small></a></h4>
-
-
-                                <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
-                                    <li class="list-inline-item">4,820 SqFt</li>
-
-                                    <li class="list-inline-item" style="list-style: none">|</li>
-
-                                    <li class="list-inline-item">5 Beds</li>
-
-                                    <li class="list-inline-item" style="list-style: none">|</li>
-
-                                    <li class="list-inline-item">5 Baths</li>
-                                </ul>
-
-                                <p class="hidden-xs">Situated between fairmount
-                                park and the prestigious philadelphia cricket
-                                club, this beautiful 2+ acre property is truly
-                                ...</p><span class="fnt-smaller fnt-lighter fnt-arial">Courtesy of HS Fox & Roach-Chestnut Hill
-                                Evergreen</span>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="brdr bgc-fff pad-10 box-shad btm-mrg-20 property-listing">
-                        <div class="media">
-                            <a class="pull-left" href="#" target="_parent">
-                            <img alt="image" class="img-fluid" src="http://images.prd.mris.com/image/V2/1/iwn7qH9r9OPnqTaTTxxb8PBzQHk2EiHU2PBBntt041AZsVsGY-SeUexTMLgRcYSJukrKOwHaYnTVXAsk6RdSmA.jpg"></a>
-
-                            <div class="clearfix visible-sm"></div>
-
-                            <div class="media-body fnt-smaller">
-                                <a href="#" target="_parent"></a>
-
-                                <h4 class="media-heading">
-                                  <a href="#" target="_parent">$1,599,999 <small class="pull-right">209 Chestnut Hill ve</small></a></h4>
-
-
-                                <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
-                                    <li class="list-inline-item">16,581 SqFt</li>
-
-                                    <li class="list-inline-item" style="list-style: none">|</li>
-
-                                    <li class="list-inline-item">8 Beds</li>
-
-                                    <li class="list-inline-item" style="list-style: none">|</li>
-
-                                    <li class="list-inline-item">4 Baths</li>
-                                </ul>
-
-                                <p class="hidden-xs">Built in 1909 by
-                                pittsburgh steel magnate henry a. laughlin,
-                                greylock is a classic chestnut hill stone
-                                mansion once cons...</p><span class="fnt-smaller fnt-lighter fnt-arial">Courtesy of ng and Foster-Devon</span>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                </div>
-
-                <div class="col-sm-6">  
-
-
-                    <div class="brdr bgc-fff pad-10 box-shad btm-mrg-20 property-listing">
-                        <div class="media">
-                            <a class="pull-left" href="#" target="_parent">
-                            <img alt="image" class="img-fluid" src="http://images.prd.mris.com/image/V2/1/vGoNjc2jHGb87GlnnDQlf6LxeOUgIOn0bL6Wvn1nEnig2Ntq6W7xN5cOQBZZeNxl9O42DOkHUw0LNnj1ZB2KHA.jpg"></a>
-
-                            <div class="clearfix visible-sm"></div>
-
-                            <div class="media-body fnt-smaller">
-                                <a href="#" target="_parent"></a>
-
-                                <h4 class="media-heading">
-                                  <a href="#" target="_parent">$1,500,000 <small class="pull-right">1220-32 N Howard St</small></a></h4>
-
-
-                                <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
-                                    <li class="list-inline-item">4,900 SqFt</li>
-
-                                    <li class="list-inline-item" style="list-style: none">|</li>
-
-                                    <li class="list-inline-item">1 Beds</li>
-
-                                    <li class="list-inline-item" style="list-style: none">|</li>
-
-                                    <li class="list-inline-item">1 Baths</li>
-                                </ul>
-
-                                <p class="hidden-xs">A once in a lifetime
-                                opportunity to own a unique live / work space
-                                in one of philadelphia's most popular
-                                neighborhoods. ...</p><span class="fnt-smaller fnt-lighter fnt-arial">Courtesy of ll Banker Preferred-Philadelphia</span>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="brdr bgc-fff pad-10 box-shad btm-mrg-20 property-listing">
-                        <div class="media">
-                            <a class="pull-left" href="#" target="_parent">
-                            <img alt="image" class="img-fluid" src="http://images.prd.mris.com/image/V2/1/uLp58OH37CTPHxXcgJXYw8zT2u3xg_2XIbFndB6J0WTSAStGBaEV6YsdAseSZTKAdthm0OzG-Ca_EIkoXIEBxw.jpg"></a>
-
-                            <div class="clearfix visible-sm"></div>
-
-                            <div class="media-body fnt-smaller">
-                                <a href="#" target="_parent"></a>
-
-                                <h4 class="media-heading">
-                                  <a href="#" target="_parent">$1,295,000 <small class="pull-right">9006 Crefeld St</small></a></h4>
-
-
-                                <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
-                                    <li class="list-inline-item">7,672 SqFt</li>
-
-                                    <li class="list-inline-item" style="list-style: none">|</li>
-
-                                    <li class="list-inline-item">7 Beds</li>
-
-                                    <li class="list-inline-item" style="list-style: none">|</li>
-
-                                    <li class="list-inline-item">5 Baths</li>
-                                </ul>
-
-                                <p class="hidden-xs">Located in chestnut hill,
-                                recently named by the american planning
-                                association as one of america's top 10 great
-                                neighborh...</p><span class="fnt-smaller fnt-lighter fnt-arial">Courtesy of RE/MAX Services</span>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-    </section> -->
-    <!-- #listing -->
-
-    <!--==========================
-      Application Section
-    ============================-->
-    <section id="application" class="wow fadeInLeft">
-      <div class="container">
-        <div class="section-header text-center">
-          <h2>Available on iOS/Android</h2>
-          <p>Download our app for quick access</p>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <img src="./img/iosandriod.png" class="img-fluid">
-          </div>
-          <div class="col-md-6 col-12">
-            <div class="row">
-              <div class="col-md-2"></div>
-              <div class="col-md-4 col-6"><a href=""><img src="./img/android.png" class="img-fluid"></a></div>
-              <div class="col-md-4 col-6"><a href=""><img src="./img/ios.png" class="img-fluid"></a></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- #app -->
 
     <!--==========================
       Testimonials Section
