--- a/ATS Website/candidate.html
+++ b/ATS Website/candidate.html
@@ -205,7 +205,10 @@
                       </li> 
                       <li class="nav-item">
                         <a class="nav-link" href="#cv" role="tab" data-toggle="tab"><i class="fas fa-book"></i> CV</a>
-                      </li>                                               
+                      </li> 
+                      <li class="nav-item">
+                        <a class="nav-link" href="#video_cv" role="tab" data-toggle="tab"><i class="fas fa-video"></i> Video CV</a>
+                      </li>                                            
                     </ul>
 
                     <!-- Tab panes -->
@@ -1100,6 +1103,13 @@
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="cv">
                           <div class="row">
+                          </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane fade" id="video_cv">
+                          <div class="row justify-content-center">
+                            <div class="col-10">
+                              <iframe width="100%" height="400px" src="https://www.youtube.com/embed/x7qPAY9JqE4"></iframe>
+                            </div>
                           </div>
                         </div>
                       </div>
